Bug 165020 - FILEOPEN DOCX: wrong part of half-offscreen-textbox's contents visible/printed
Summary: FILEOPEN DOCX: wrong part of half-offscreen-textbox's contents visible/printed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Objects
  Show dependency treegraph
 
Reported: 2025-02-03 20:35 UTC by Justin L
Modified: 2025-03-26 13:22 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
tdf106153-1.docx_import-compare-1.png: RED=25.2 master, BLUE=25.2 oldest, grayscale=Word 2019 (39.59 KB, image/png)
2025-02-03 20:35 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-02-03 20:35:08 UTC
Created attachment 198949 [details]
tdf106153-1.docx_import-compare-1.png: RED=25.2 master, BLUE=25.2 oldest, grayscale=Word 2019

overlapping_pageborder_textboxes.docx (attachment 131428 [details] from bug 106153) is now producing the entire block of text during a PDF export, instead of just the "visible back half" of the textbox.

The change happened with commit a0b6587c4acb1d74e1b00904147821640c98b323
Author: Miklos Vajna on Thu Jun 13 08:04:30 2024 +0200
    tdf#161199 sw DoNotCaptureDrawObjsOnPage: capture wrap=none draw objects

Steps to reproduce
1.) open overlapping_pageborder_textboxes.docx
   - notice that the left text box starts with "Lorem" visible. It used to start with "diam" visible.
2.) export to PDF

Look at the PDF. The left-side textbox is showing the full text of  "Lorem ipsum", when it should only be showing the last few characters per line.
Comment 1 m_a_riosv 2025-02-03 23:37:52 UTC
Reproducible
Version: 24.8.4.2 (X86_64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Commit Notification 2025-03-26 11:50:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/44b4ff646ea21df75f9e35b885d76d1aa0d61682

tdf#165020 sw DoNotCaptureDrawObjsOnPage: fix left padding for wrap through

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-03-26 13:22:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/a29cea19d594e20bae8ce3c43c8a348bde5e78e6

tdf#165020 sw DoNotCaptureDrawObjsOnPage: fix left padding for wrap through

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.